--- a/MapViewerEngine.Server/MapViewerEngine.Server.csproj
+++ b/MapViewerEngine.Server/MapViewerEngine.Server.csproj
@@ -15,4 +15,8 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\MapViewerEngine.Shared\MapViewerEngine.Shared.csproj" />
+	</ItemGroup>
+
 </Project>
