Prepare dev environment for client/server side

--- a/MapViewerEngine.Server/MapViewerEngine.Server.csproj
+++ b/MapViewerEngine.Server/MapViewerEngine.Server.csproj
@@ -16,6 +16,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\GbxToolAPI\Src\GbxToolAPI.Server\GbxToolAPI.Server.csproj" />
 	  <ProjectReference Include="..\MapViewerEngine.Shared\MapViewerEngine.Shared.csproj" />
 	</ItemGroup>
 
