--- a/MapViewerEngine/MapViewerEngine.csproj
+++ b/MapViewerEngine/MapViewerEngine.csproj
@@ -5,6 +5,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<Version>1.0.1</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
