--- a/MapViewerEngine.Server/MapViewerEngine.Server.csproj
+++ b/MapViewerEngine.Server/MapViewerEngine.Server.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Dapper" Version="2.0.123" />
+		<PackageReference Include="GbxToolAPI.Server" Version="1.0.0" />
 		<PackageReference Include="Mapster" Version="7.3.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.3" />
@@ -15,7 +16,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\GbxToolAPI\Src\GbxToolAPI.Server\GbxToolAPI.Server.csproj" />
 	  <ProjectReference Include="..\MapViewerEngine.Shared\MapViewerEngine.Shared.csproj" />
 	</ItemGroup>
 
