--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,6 +22,8 @@ jobs:
         submodules: recursive
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
+    - name: Add GitHub NuGet source
+      run: dotnet nuget add source --username USERNAME --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/bigbang1112-cz/index.json"
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
